# south-park-quotes-sdk

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  SECURITY.md
.sdk/: package-lock.json  package.json
go/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  go.mod  south-park-quotes.go
go-cli/: .gitignore  Makefile  README.md  go.mod  main.go  words.go
go-mcp/: .gitignore  Makefile  README.md  go.mod  main.go  tools.go
lua/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  config.lua  features.lua  south-park-quotes.rockspec  south-park-quotes_sdk.lua  south-park-quotes_types.lua
php/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  composer.json  config.php  features.php  southparkquotes_sdk.php
py/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  config.py  features.py  pyproject.toml  southparkquotes_sdk.py  southparkquotes_types.py
py/core/: context.py  control.py  error.py  helpers.py  response.py  result.py  spec.py
py/entity/: quote_entity.py
py/feature/: base_feature.py  cache_feature.py  debug_feature.py  proxy_feature.py  ratelimit_feature.py  telemetry_feature.py  test_feature.py
py/test/: feature_harness.py  runner.py  test_exists.py  test_feature.py  test_netsim.py  test_pipeline.py  test_primary_utility.py  test_quote_direct.py  test_quote_entity.py  test_readme_examples.py
py/utility/: clean.py  done.py  feature_add.py  fetcher.py  make_context.py  make_options.py  make_point.py  make_response.py  make_spec.py  param.py  prepare_body.py  prepare_params.py  prepare_query.py  register.py  result_basic.py  result_body.py
(+414 files in other folders)
